gem2deb (0.23) UNRELEASED; urgency=medium

  * dh_ruby:
    - take parameters from the $DH_RUBY environment variable

 -- Antonio Terceiro <terceiro@debian.org>  Wed, 11 Nov 2015 14:50:13 -0200

gem2deb (0.22.1) unstable; urgency=medium

  * Skip integration tests during the build. When buildind only architecture
    independent packages (i.e. with dpkg-buildpackage -A or sbuild
    --arch-all-only), the nested dpkg-buildpackage calls in the integration
    tests will fail. We'll still run the integration tests under autopkgtest
    though.

 -- Antonio Terceiro <terceiro@debian.org>  Wed, 11 Nov 2015 16:39:24 -0200

gem2deb (0.22) unstable; urgency=medium

  [ Pirate Praveen ]
  * use --source https://rails-assets.org for rails-assets-* (Closes: #771212)

  [ Antonio Terceiro ]
  * dh-make-ruby:
    - handle the case where apt-file exits successfully but still does not
      find anything (Closes: #800108)
    - cleanup template debian/rules, and make it set
      `GEM2DEB_TEST_RUNNER = --check-dependencies` by default

 -- Antonio Terceiro <terceiro@debian.org>  Wed, 11 Nov 2015 13:39:06 -0200

gem2deb (0.21.1) unstable; urgency=medium

  * gem2deb-test-runner: fix call to `gem list` after a dependency checking
    failure; avoid exec'ing `gem list` to be able to actually return non-0
    from gem2deb-test-runner.

 -- Antonio Terceiro <terceiro@debian.org>  Thu, 20 Aug 2015 00:11:53 +0200

gem2deb (0.21) unstable; urgency=medium

  * dh_ruby: only ask questions interactively when called by gem2deb
  * dh-make-ruby:
    - use debhelper compatibility level 9 by default
    - don't generate debian/tests/control.ex anymore. So far a few dozen
      packages, I have deleted it every single time.
    - use homepage as default for Source: field in debian/copyright
  * gem2deb-test-runner: call `gem list` when dependency checking fails to
    ease debugging

 -- Antonio Terceiro <terceiro@debian.org>  Tue, 18 Aug 2015 19:57:33 +0200
