@@ -2,6 +2,7 @@ gem2deb (0.23) UNRELEASED; urgency=medium
 
   * dh_ruby:
     - take parameters from the $DH_RUBY environment variable
+    - add experimental support for installing packages as gems.
 
  -- Antonio Terceiro <terceiro@debian.org>  Wed, 11 Nov 2015 14:50:13 -0200
 
